--- a/2_code/2_experiment/build_sfincs.ini
+++ b/2_code/2_experiment/build_sfincs.ini
@@ -5,24 +5,40 @@ config_fn = sfincs.inp          # name of sfincs config (inp) file
 [setup_config]
 alpha = 0.5
 qinf = 0.0
+dtout = 86400
 
-[setup_basemaps]
-basemaps_fn = merit_hydro       # hydrography basemaps ['elevtn']
+[setup_topobathy]
+topobathy_fn = merit_hydro       # hydrography basemaps ['elevtn']
 crs = utm                       # model CRS (must be UTM zone)
 
-[setup_merge_topobathy]
-topobathy_fn = gebco
-offset_fn = mdt_cnes_cls18
-merge_buffer = 2
-max_width = 15
+; [setup_merge_topobathy]
+; topobathy_fn = gebco
+; offset_fn = mdt_cnes_cls18
+; merge_buffer = 2
+; max_width = 15
+; elv_min = -5
 
 [setup_mask]
-elv_min = -5
-min_cells = 10000
+drop_area = 1000
 
 [setup_river_hydrography]
 hydrography_fn = merit_hydro
 adjust_dem = True
+outlets=edge
+
+[setup_river_bathymetry]
+river_mask_fn = grwl_mask
+rivwth_method = mask
+rivdph_method = geom  # constant depth
+river_upa = 100
+constrain_estuary = False
+min_rivdph = 0.5
+
+[setup_manning_roughness]
+lulc_fn = None
+riv_man = 0.03
+sea_man = 0.02
+lnd_man = 0.1  # TODO check value
 
 [setup_river_inflow]
 river_upa = 500                # Mimimum upstream area threshold (km2) of river cells
@@ -37,5 +53,5 @@ include_buffer = 200
 river_upa=10
 outflow_width=4e3
 
-; [setup_manning_roughness]
-; lulc_fn = None                     # based on river mask
+[setup_gauges]
+gauges_fn=obs_locs.geojson
