--- a/2_code/2_experiment/build_sfincs.ini
+++ b/2_code/2_experiment/build_sfincs.ini
@@ -32,7 +32,8 @@ rivwth_method = mask
 rivdph_method = geom  # constant depth
 river_upa = 100
 constrain_estuary = False
-min_rivdph = 0.5
+rivbank = False
+min_rivdph = 0.0
 
 [setup_manning_roughness]
 lulc_fn = None
