--- a/2_code/2_experiment/build_sfincs.ini
+++ b/2_code/2_experiment/build_sfincs.ini
@@ -1,6 +1,6 @@
 [global]
-write_gis = True                # write addtional geotif and geojson files to gis subfolder
-config_fn = sfincs.inp          # name of sfincs config (inp) file
+write_gis = True
+config_fn = sfincs.inp
 
 [setup_config]
 alpha = 0.5
@@ -8,15 +8,8 @@ qinf = 0.0
 dtout = 86400
 
 [setup_topobathy]
-topobathy_fn = merit_hydro       # hydrography basemaps ['elevtn']
-crs = utm                       # model CRS (must be UTM zone)
-
-; [setup_merge_topobathy]
-; topobathy_fn = gebco
-; offset_fn = mdt_cnes_cls18
-; merge_buffer = 2
-; max_width = 15
-; elv_min = -5
+topobathy_fn = merit_hydro
+crs = utm
 
 [setup_mask]
 drop_area = 1000
@@ -29,30 +22,31 @@ outlets=edge
 [setup_river_bathymetry]
 river_mask_fn = grwl_mask
 rivwth_method = mask
-rivdph_method = geom  # constant depth
 river_upa = 100
+# constant zero depth > updated later
+rivdph_method = geom  
 constrain_estuary = False
 rivbank = False
-min_rivdph = 0.0
+min_rivdph = 0.0  
 
 [setup_manning_roughness]
 lulc_fn = None
 riv_man = 0.03
 sea_man = 0.02
-lnd_man = 0.1  # TODO check value
+lnd_man = 0.1
 
 [setup_river_inflow]
-river_upa = 500                # Mimimum upstream area threshold (km2) of river cells
+river_upa = 500 
 river_len = 10e3
 
 [setup_bounds]
-btype = waterlevel               # boundary type ['waterlevel', 'outflow']
-include_mask_fn = osm_coastlines # sea polygon
-include_buffer = 200
+btype = waterlevel
+mask_fn = osm_coastlinessws
+mask_buffer = 200
 
 [setup_river_outflow]
 river_upa=10
-outflow_width=4e3
+outflow_width=1e3
 
 [setup_gauges]
 gauges_fn=obs_locs.geojson
