add data; test reproducibility

--- a/2_code/2_experiment/build_sfincs.ini
+++ b/2_code/2_experiment/build_sfincs.ini
@@ -41,7 +41,7 @@ river_len = 10e3
 
 [setup_bounds]
 btype = waterlevel
-mask_fn = osm_coastlinessws
+mask_fn = osm_coastlines
 mask_buffer = 200
 
 [setup_river_outflow]
